# context-router

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/context_router/: __init__.py  analyzer.py  cli.py  config.py  models.py  router.py
src/context_router/providers/: __init__.py
src/context_router/strategies/: __init__.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_models.py  test_providers.py  test_router.py  test_strategies.py
