[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-router"
version = "0.1.0"
description = "Smart AI request router that analyzes prompts and routes them to the best model/provider"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Edgar Ortega Ramirez", email = "edgar@edgarortega.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "click>=8.4.0",
    "httpx>=0.28.0",
    "tenacity>=9.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
context-router = "context_router.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
